More swagger documentation
